# pythonapp-withkube

./: Dockerfile  README.md  app.py  deployment.yaml  pyproject.toml  service.yaml
